<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".ui.dashboard.DashboardFragment">

    <!-- Here you put the rest of your current view-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/deadlineBanner"
            android:layout_width="367dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="Set A Deadline For This Invitation to Expire:"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="367dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="Invite Someone to Share Housing With You!"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />

        <EditText
            android:id="@+id/address"
            android:layout_width="171dp"
            android:layout_height="65dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="Address"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039" />

        <EditText
            android:id="@+id/rent"
            android:layout_width="171dp"
            android:layout_height="72dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="Rent"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104" />

        <EditText
            android:id="@+id/utilities"
            android:layout_width="171dp"
            android:layout_height="81dp"
            android:ems="10"
            android:hint="Utilities"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.154" />

        <EditText
            android:id="@+id/numBeds"
            android:layout_width="171dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="Number of Beds"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.206" />

        <EditText
            android:id="@+id/otherInfo"
            android:layout_width="171dp"
            android:layout_height="51dp"
            android:ems="10"
            android:hint="Other Housing Info"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.243" />

        <EditText
            android:id="@+id/dailySchedule"
            android:layout_width="171dp"
            android:layout_height="51dp"
            android:ems="10"
            android:hint="Your Daily Schedule"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285" />


        <EditText
            android:id="@+id/academicFocus"
            android:layout_width="171dp"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="Your Academic Focus"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.332" />


        <EditText
            android:id="@+id/personality"
            android:layout_width="171dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="Your Personality"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

        <EditText
            android:id="@+id/milesFromCampus"
            android:layout_width="171dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="Miles From Campus"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428" />

        <EditText
            android:id="@+id/otherDetails"
            android:layout_width="171dp"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="Other Details About You"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.492" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="388dp"
            android:layout_height="628dp"
            android:layout_marginStart="8dp"


            android:layout_marginTop="900dp"
            android:layout_weight="4"
            android:calendarViewShown="true"
            android:spinnersShown="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="176dp"
            android:layout_height="90dp"


            android:layout_marginStart="100dp"
            android:layout_marginTop="1300dp"
            android:onClick="addInvitation"
            android:text="Create Invitation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>